src/content/docs/sdk/flutter/v4/features/skad.mdx
---
title: Set up SKAdNetwork and conversion values
description: Configure SKAdNetwork features for your iOS apps.
slug: en/sdk/flutter/v4/features/skan
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/flutter/features/skan
---

<Callout type="important">

This feature is only available on devices running iOS 14 and above.

</Callout>

StoreKit Ad Network (SKAdNetwork) is Apple's attribution framework for app install and reinstall attribution. The SKAdNetwork workflow goes like this:

1. Apple gathers attribution information and notifies the relevant ad network.
2. The network sends a postback with this information to Adjust.
3. Adjust displays SKAdNetwork data in [Datascape](https://help.adjust.com/en/suite/article/datascape).

## Disable SKAdNetwork communication {#disable-skadnetwork-communication}

<CodeBlock title="Method signature">

```dart
void deactivateSKAdNetworkHandling()
```

</CodeBlock>

<MinorVersion added="v4.23.0">

The Adjust SDK communicates with SKAdNetwork by default on v4.23.0 and above. The SDK registers for SKAdNetwork attribution upon initialization.

</MinorVersion>

Your config object contains a boolean `isSKAdNetworkHandlingActive` property that controls this behavior. You can disable SKAdNetwork communication by calling the `deactivateSKAdNetworkHandling` method with no argument.

<Callout type="important">

You must call the `deactivateSKAdNetworkHandling` method _before_ initializing the Adjust SDK.

</Callout>

```dart
AdjustConfig adjustConfig = new AdjustConfig('{YourAppToken}', AdjustEnvironment.Sandbox, true);
//...
adjustConfig.deactivateSKAdNetworkHandling();
//...
Adjust.start(adjustConfig);
```

## Update conversion values {#update-conversion-values}

<CodeBlock title="Method signature">

```dart
static void updateConversionValue(int conversionValue)
```

</CodeBlock>

Conversion values are a mechanism used to measure user behavior in SKAdNetwork. You can map 64 conditions to values from `0` through `63` and send this integer value to SKAdNetwork on user install. This gives you insight into how your users interact with your app in the first few days.

If you manage your conversion values with Adjust, the servers update this value in the SDK. You can also update this value by using the `updateConversionValue` method. This method wraps [Apple's `updateConversionValue` method](https://developer.apple.com/documentation/storekit/skadnetwork/3566697-updateconversionvalue). It accepts an integer argument representing your updated conversion value.

```dart
Adjust.updateConversionValue(6);
```

## Listen for changes to conversion values {#listen-for-changes-to-conversion-values}

<CodeBlock title="Property declaration">

```dart
typedef void ConversionValueUpdatedCallback(num? conversionValue);
```

</CodeBlock>

If you use Adjust to manage conversion values, the Adjust's servers send conversion value updates to the SDK. You can set up a delegate function to listen for these changes using the `conversionValueUpdatedCallback` method. Pass your function as an argument.

```dart
AdjustConfig adjustConfig = new AdjustConfig(yourAppToken, environment);
config.conversionValueUpdatedCallback = (num? conversionValue) {
   print('[Adjust]: Received conversion value update: ' + conversionValue!.toString());
};
Adjust.start(adjustConfig);
```

### Example {#example}

This example shows how to log the following when the conversion value updates:

-  A message confirming the conversion value update
-  The new conversion value

<CodeBlock title="main.dart">

```dart
import 'package:adjust_sdk/adjust.dart';
import 'package:flutter/cupertino.dart';
import 'package:flutter/material.dart';
import 'package:flutter/services.dart';

initPlatformState() async {
   AdjustConfig config =
      new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
   config.logLevel = AdjustLogLevel.verbose;

config.conversionValueUpdatedCallback = (num? conversionValue) {
      print('[Adjust]: Received conversion value update: ' +
         conversionValue!.toString());
   };

Adjust.start(config);

}
```

</CodeBlock>

## SKAdNetwork 4.0 callbacks {#skadnetwork-4-0-callbacks}

<MinorVersion added="v4.33.0">

SKAdNetwork 4.0 postbacks contain some additional information to give advertisers more insight into their users. When Adjust's servers update conversion values, this additional information is sent in a payload. You can access this information with the `Skad4ConversionValueUpdatedCallback` callback method.

</MinorVersion>

<Table>

| Arguments     | Data type  | Description                                                                                                                                                                                                                                                                                              |
| ------------- | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `fineValue`   | `NSNumber` | The conversion value sent by Adjust's servers                                                                                                                                                                                                                                                            |
| `coarseValue` | `NSString` | The coarse conversion value. This value is used if your app doesn't have sufficient installs to reach the privacy threshold.<ul><li>`none`</li><li>`low`</li><li>`medium`</li><li>`high`</li></ul><br/>Apple sends none whenever none of the conditions that are set for low, medium, and high were met. |
| `lockWindow`  | `NSNumber` | Whether to send the postback before the conversion window ends. `1` indicates the postback will be sent before the conversion window ends.<br/>Defaults to `0` in SKAdNetwork 4.0 postbacks and `nil` in older SKAdNetwork versions                                                                      |

</Table>

### Example {#example-3}

This example shows how to log the the fine conversion value, the coarse conversion value, and whether the SKAdNetwork postback is set to send before the conversion window ends.

```dart
import 'package:adjust_sdk/adjust.dart';
import 'package:flutter/cupertino.dart';
import 'package:flutter/material.dart';
import 'package:flutter/services.dart';

initPlatformState() async {
   AdjustConfig config =
      new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
   config.logLevel = AdjustLogLevel.verbose;

config.Skad4ConversionValueUpdatedCallback = (num? conversionValue, String? coarseValue, bool? lockWindow) {
      print('[Adjust]: Conversion value updated. Callback received');
      print('[Adjust]: Conversion value: ' + conversionValue!.toString());
      print('[Adjust]: Coarse conversion value: ' + coarseValue!);
      print('[Adjust]: Will send before conversion value window ends: ' lockWindow!.toString());
   };

Adjust.start(config);
}
```

## Set up direct install postbacks {#set-up-direct-install-postbacks}

<Callout type="note">

Direct install postbacks contain only SKAdNetwork information. Information such as campaign data isn't included in these postbacks.

</Callout>

You can configure your app to send a copy of winning SKAdNetwork callbacks to Adjust. This enables you to use SKAdNetwork information in your analytics.

To set up direct install postbacks, you need to add the Adjust callback URL to your `Info.plist` file:

1. Select **Info.plist** in the Project navigator in Xcode.
2. Select the Add button beside a key in the property list editor and press `Return`.
3. Enter _`NSAdvertisingAttributionReportEndpoint`_ as the key name.
4. Set the **Type** to **String** in the pop up menu.
5. Enter the address _`https://adjust-skadnetwork.com`_.

<Callout type="seealso">

See Apple's guide on [Configuring an Advertised App](https://developer.apple.com/documentation/storekit/skadnetwork/configuring_an_advertised_app) for more information.

</Callout>
